test/corpus/code_element_reference.txt
===
Simple let statement number
===

let a = 3

---
(cairo_file
    (code_block
        (code_element_reference
            (typed_identifier
                (identifier))
            (rvalue
                (number)))))

===
Simple let statement identifier
===

let a = b

---
(cairo_file
    (code_block
        (code_element_reference
            (typed_identifier
                (identifier))
            (rvalue
                (identifier)))))

===
Simple let local
===

let local a = b

---
(cairo_file
    (code_block
        (code_element_reference
            (typed_identifier
                (identifier))
            (rvalue
                (identifier)))))
              
