test/corpus/import.txt
===
Simple import
===
from starkware.cairo.common.alloc import alloc
---
(cairo_file
    (code_block
        (code_element_import
            (identifier)
            (identifier)
            (identifier)
            (identifier)
            (import_body
                (aliased_identifier
                    (identifier))))))

===
Multiple import
===
from starkware.cairo.common.math import split_felt, unsigned_div_rem
---
(cairo_file
    (code_block
        (code_element_import
            (identifier)
            (identifier)
            (identifier)
            (identifier)
            (import_body
                (aliased_identifier
                    (identifier))
                (aliased_identifier
                    (identifier))))))

===
Import aliased
===
from starkware.cairo.common.uint256 import Uint256 as u, toto as tata
---
(cairo_file
    (code_block
        (code_element_import
            (identifier)
            (identifier)
            (identifier)
            (identifier)
            (import_body
                (aliased_identifier
                    (identifier)
                    (identifier))
                (aliased_identifier
                    (identifier)
                    (identifier))))))
