test/corpus/instruction.txt
===
Jumps
===


jmp rel 2 + 2
jmp abs 3
jmp foo
jmp rel 19 if 3 + 2 != 4
jmp bar if 3 + 2 != 2

---
(cairo_file
    (code_block
        (code_element_instruction
            (inst_jmp_rel
                (expr_add
                    (number)
                    (number))))
        (code_element_instruction
            (inst_jmp_abs
                (number)))
        (code_element_instruction
            (inst_jmp_to_label
                (identifier)))
        (code_element_instruction
            (inst_jnz
                (number)
                (expr_add
                    (number)
                    (number))
                (number)))
        (code_element_instruction
            (inst_jnz_to_label
                (identifier)
                (expr_add
                    (number)
                    (number))
                (number)))))
